--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Planetize
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,11 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+
+<ion-list>
+  <ion-item>Lord Glablok Rules</ion-item>
+  <ion-item>Lord Glablok hits YOU for 3 damage</ion-item>
+</ion-list>
 
   <div id="container">
     <strong>Ready to create an app?</strong>
