--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,17 +9,13 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Star Wars Planet Lister</ion-title>
     </ion-toolbar>
   </ion-header>
 
 <ion-list>
   <ion-item>Lord Glablok Rules</ion-item>
-  <ion-item>Lord Glablok hits YOU for 3 damage</ion-item>
+  <ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item>
 </ion-list>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
