--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,13 +9,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Star Wars Planet Lister</ion-title>
+      <ion-title size="large">Star Wars Planets ({{ planets.length }}) </ion-title>
     </ion-toolbar>
   </ion-header>
 
 <ion-list>
   <ion-item>Lord Glablok Rules</ion-item>
-  <ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item><ion-item>Lord Glablok hits YOU for 3 damage</ion-item>
+  <ion-item>Lord Glablok hits YOU for 3 damage</ion-item>
+  <ion-item 
+    *ngFor="let p of planets"
+  >
+    {{ p }}
+  </ion-item>
 </ion-list>
 
 </ion-content>
