--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Planetize
+      Star Wars Planets ({{ planets.length }})
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Star Wars Planets ({{ planets.length }}) </ion-title>
+      <ion-title size="large"> </ion-title>
     </ion-toolbar>
   </ion-header>
 
